--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,9 @@
 # production
 /build
 
-# misc
-.DS_Store
-*.pem
+# # misc
+# .DS_Store
+# *.pem
 
 # debug
 npm-debug.log*
@@ -30,12 +30,12 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# # env files (can opt-in for committing if needed)
+# .env*
 
 # vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# # typescript
+# *.tsbuildinfo
+# next-env.d.ts
