Added Google OAUTH

--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,10 @@
+# Development environment variables
 MONGODB_URI=mongodb+srv://roshhanyad:candidcarryq123@cluster0.2tpaz.mongodb.net/?authSource=admin&retryWrites=true&w=majority
 JWT_SECRET=your_super_secret_jwt_key_should_be_very_long_and_complex
 JWT_EXPIRES_IN=7d
 NODE_ENV=development
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=another_secure_secret_key_for_nextauth
-
 
 # Google OAuth credentials
 GOOGLE_CLIENT_ID=543633272695-eo1cue4ebbkg469j7orhshivm6hmdlp2.apps.googleusercontent.com
