Products Tab in Admin Configured

--- a/.env.local
+++ b/.env.local
@@ -10,3 +10,9 @@ NEXTAUTH_SECRET=another_secure_secret_key_for_nextauth
 GOOGLE_CLIENT_ID=543633272695-eo1cue4ebbkg469j7orhshivm6hmdlp2.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=543633272695-eo1cue4ebbkg469j7orhshivm6hmdlp2.apps.googleusercontent.com
+
+# Cloudinary variables
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dvucyqem4
+NEXT_PUBLIC_CLOUDINARY_API_KEY=729371384467434
+CLOUDINARY_API_SECRET=MsV3m42eFkxPKbVqf79uyuJjyes
+CLOUDINARY_UPLOAD_PRESET=ml_default
