--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cors": "^2.8.5",
@@ -43,6 +44,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
     "next": "^15.2.4",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.2.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.3",
