Payment Proof Upload Fixed

--- a/.env.local
+++ b/.env.local
@@ -16,3 +16,4 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dvucyqem4
 NEXT_PUBLIC_CLOUDINARY_API_KEY=729371384467434
 CLOUDINARY_API_SECRET=MsV3m42eFkxPKbVqf79uyuJjyes
 CLOUDINARY_UPLOAD_PRESET=ml_default
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=payment_proofs
